--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BB5V4S80YD"></script>
 <script>
@@ -35,4 +36,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
