--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BB5V4S80YD"></script>
@@ -13,6 +14,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <p>**flip your phone sideways</p>
     <title>Motivational Quotes by Emotion</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -36,5 +38,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
