--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+DOCTYPE html>
 <html lang="en">
 <head>
     
@@ -14,8 +14,8 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <p>**flip your phone sideways</p>
-    <title>Motivational Quotes by Emotion</title>
+    
+    <title><p>**Turn Phone sideways**</p>Motivational Quotes by Emotion</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -38,6 +38,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
