--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     
@@ -38,6 +38,7 @@ DOCTYPE html>
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
