--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <title><p>**Turn Phone sideways**</p>Motivational Quotes by Emotion</title>
+    <title>Motivational Quotes by Emotion</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -38,6 +38,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
