--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <button class="emotion-btn" onclick="getQuote('happy')">😃Happy</button>
             <button class="emotion-btn" onclick="getQuote('sad')">☹️Sad</button>
             <button class="emotion-btn" onclick="getQuote('angry')">😡Angry</button>
-            <button class="emotion-btn" onclick="getQuote('inspired')">Inspired</button>
+            <button class="emotion-btn" onclick="getQuote('inspired')">🤑Inspired</button>
             <button class="emotion-btn" onclick="getQuote('confident')">😎Confident</button>
             <button class="emotion-btn" onclick="getQuote('anxious')">😰Anxious</button>
             <button class="emotion-btn" onclick="getQuote('hopeful')">🙂‍↕️Hopeful</button>
