--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <button class="emotion-btn" onclick="getQuote('inspired')">🤑Inspired</button>
             <button class="emotion-btn" onclick="getQuote('confident')">😎Confident</button>
             <button class="emotion-btn" onclick="getQuote('anxious')">😰Anxious</button>
-            <button class="emotion-btn" onclick="getQuote('hopeful')">🙂‍↕️Hopeful</button>
+            <button class="emotion-btn" onclick="getQuote('hopeful')">🤩Hopeful</button>
         </div>
         <div class="quote-display">
             <p id="quote">Click an emotion to get a motivational quote!</p>
