--- a/index.html
+++ b/index.html
@@ -1,168 +1,28 @@
-// Sample set of quotes categorized by emotions
-const quotes = {
-    happy: [
-        "Happiness is not something ready made. It comes from your own actions. - Dalai Lama",
-        "For every minute you are angry you lose sixty seconds of happiness. - Ralph Waldo Emerson",
-        "Happiness depends upon ourselves. - Aristotle"
-        "Happiness is not something ready made. It comes from your own actions. - Dalai Lama"
-"For every minute you are angry you lose sixty seconds of happiness. - Ralph Waldo Emerson"
-"Happiness depends upon ourselves. - Aristotle"
-"Be happy for this moment. This moment is your life. - Omar Khayyam"
-"The purpose of our lives is to be happy. - Dalai Lama"
-"Happiness is the secret to all beauty. There is no beauty without happiness. - Christian Dior"
-"Count your age by friends, not years. Count your life by smiles, not tears. - John Lennon"
-"Think of all the beauty still left around you and be happy. - Anne Frank"
-"The only joy in the world is to begin. - Cesare Pavese"
-"Success is not the key to happiness. Happiness is the key to success. - Albert Schweitzer"
-"Happiness is when what you think, what you say, and what you do are in harmony. - Mahatma Gandhi"
-"The happiest people don’t have the best of everything—they just make the best of everything. - Unknown"
-"The happiness of your life depends upon the quality of your thoughts. - Marcus Aurelius"
-"If you want to be happy, be. - Leo Tolstoy"
-"Happiness is a direction, not a place. - Sydney J. Harris"
-"Most folks are as happy as they make up their minds to be. - Abraham Lincoln"
-"Happiness is a warm puppy. - Charles M. Schulz"
-"Happiness is not by chance, but by choice. - Jim Rohn"
-"Be happy with what you have while working for what you want. - Helen Keller"
-"Let us be grateful to the people who make us happy. - Marcel Proust"
-"Happiness radiates like the fragrance from a flower and draws all good things towards you. - Maharishi Mahesh Yogi"
-"Happiness grows at our own firesides, and is not to be picked in strangers' gardens. - Douglas William Jerrold"
-"The best way to cheer yourself is to try to cheer someone else up. - Mark Twain"
-"Joy is not in things; it is in us. - Richard Wagner"
-"Happy he who learns to bear what he cannot change. - Friedrich Schiller"
-"Happiness held is the seed; happiness shared is the flower. - John Harrigan"
-"To be happy, we must not be too concerned with others. - Albert Camus"
-"Happiness is the art of never holding in your mind the memory of any unpleasant thing that has passed. - Unknown"
-"Happiness is acceptance. - Unknown"
-"The talent for being happy is appreciating and liking what you have, instead of what you don't have. - Woody Allen"
-"Some cause happiness wherever they go; others whenever they go. - Oscar Wilde"
-"Don’t wait around for other people to be happy for you. Any happiness you get you’ve got to make yourself. - Alice Walker"
-"Happiness is not something you postpone for the future; it is something you design for the present. - Jim Rohn"
-"The joy of life consists in the exercise of one's energies, continual growth, constant change, the enjoyment of every new experience. - Aleister Crowley"
-"Happiness is like a kiss. You must share it to enjoy it. - Bernard Meltzer"
-"True happiness arises, in the first place, from the enjoyment of oneself. - Joseph Addison"
-"The secret to happiness is freedom, and the secret to freedom is courage. - Thucydides"
-"Happiness makes up in height for what it lacks in length. - Robert Frost"
-"Of all forms of caution, caution in love is perhaps the most fatal to true happiness. - Bertrand Russell"
-"A happy heart makes a cheerful face. - Proverbs"
-"The grand essentials to happiness in this life are something to do, something to love, and something to hope for. - Allan K. Chalmers"
-"The present moment is filled with joy and happiness. If you are attentive, you will see it. - Thich Nhat Hanh"
-"Happiness is not a goal; it is a by-product. - Eleanor Roosevelt"
-"There is only one happiness in this life, to love and be loved. - George Sand"
-"Happiness is a journey, not a destination. - Ben Sweetland"
-"Whoever is happy will make others happy. - Anne Frank"
-"Doing what you like is freedom. Liking what you do is happiness. - Unknown"
-"The happiest people are the givers, not the takers. - Unknown"
-"A cheerful heart is good medicine. - Proverbs"
-"Happiness often sneaks in through a door you didn’t know you left open. - John Barrymore"
-"Happiness is the meaning and the purpose of life, the whole aim and end of human existence. - Aristotle"
-"Thousands of candles can be lit from a single candle, and the life of the candle will not be shortened. Happiness never decreases by being shared. - Buddha"
-"Joy does not simply happen to us. We have to choose joy and keep choosing it every day. - Henri J.M. Nouwen"
-"The surest way to happiness is to lose yourself in a cause greater than yourself. - Unknown"
-"Spend more time doing what makes you forget about the time. - Charlotte Eriksson"
-"If you want happiness for an hour, take a nap. If you want happiness for a day, go fishing. If you want happiness for a year, inherit a fortune. If you want happiness for a lifetime, help someone else. - Chinese Proverb"
-"If you want to live a happy life, tie it to a goal, not to people or things. - Albert Einstein"
-"An effort made for the happiness of others lifts us above ourselves. - Lydia M. Child"
-"Being happy never goes out of style. - Lilly Pulitzer"
-"Happiness comes in waves. It’ll find you again. - Unknown"
-"The secret of happiness is to admire without desiring. - Carl Sandburg"
-"Happiness comes from contentment. - Dalai Lama"
-"No medicine cures what happiness cannot. - Gabriel García Márquez"
-"Happiness is a choice that requires effort at times. - Aeschylus"
-"The happiest people don't necessarily have the best of everything; they just make the best of everything. - Sam Cawthorn"
-"Learn to let go. That is the key to happiness. - Buddha"
-"Whatever you decide to do, make sure it makes you happy. - Paulo Coelho"
-"If you want others to be happy, practice compassion. If you want to be happy, practice compassion. - Dalai Lama"
-"Happy people plan actions, they don’t plan results. - Dennis Waitley"
-"Sometimes your joy is the source of your smile, but sometimes your smile can be the source of your joy. - Thich Nhat Hanh"
-"True happiness is... to enjoy the present, without anxious dependence upon the future. - Lucius Annaeus Seneca"
-"The most important thing is to enjoy your life—to be happy—it’s all that matters. - Audrey Hepburn"
-"Happiness is not having what you want. It is appreciating what you have. - Unknown"
-"To live is the rarest thing in the world. Most people exist, that is all. - Oscar Wilde"
-"The best way to pay for a lovely moment is to enjoy it. - Richard Bach"
-"One of the secrets of a happy life is continuous small treats. - Iris Murdoch"
-"Take time to make your soul happy. - Unknown"
-"Happiness is found when you stop comparing yourself to other people. - Unknown"
-"Wherever you go, no matter what the weather, always bring your own sunshine. - Anthony J. D'Angelo"
-"A happy life consists in the tranquility of mind. - Cicero"
-"The moments of happiness we enjoy take us by surprise. It is not that we seize them, but that they seize us. - Ashley Montagu"
-"If you aren’t grateful for what you already have, what makes you think you would be happy with more? - Roy T. Bennett"
-"Start each day with a grateful heart. - Unknown"
-"Happiness is a habit—cultivate it. - Elbert Hubbard"
-"The happier you are, the more beautiful you become. - Unknown"
-"One joy scatters a hundred griefs. - Chinese Proverb"
-"Happiness depends more on the inward disposition of mind than on outward circumstances. - Benjamin Franklin"
-"Being happy isn’t having everything in your life be perfect. Maybe it’s about stringing together all the little things. - Ann Brashares"
-"The happiness of life is made up of minute fractions—the little, soon-forgotten charities of a kiss or smile, a kind look or heartfelt compliment. - Samuel Taylor Coleridge"
-"Happiness grows at our own firesides, and is not to be picked in strangers’ gardens. - Douglas William Jerrold"
-"Happiness is the interval between periods of unhappiness. - Don Marquis"
-"Blessed are those who can give without remembering and take without forgetting. - Elizabeth Bibesco"
-"Happiness walks on busy feet. - Kitte Turmell"
-"Happiness is only real when shared. - Christopher McCandless"
-"The essence of philosophy is that a man should so live that his happiness shall depend as little as possible on external things. - Epictetus"
-"Success is getting what you want, happiness is wanting what you get. - W.P. Kinsella"
-"Happiness is the highest good. - Aristotle"
-"A calm and modest life brings more happiness than the pursuit of success combined with constant restlessness. - Albert Einstein"
-"May your choices reflect your hopes, not your fears. - Nelson Mandela"
-"Oftentimes, the happiest people are those who simply have the best attitude about whatever comes their way. - Unknown"
-"Great happiness is to be found not in comfort, but in conquering obstacles. - Zig Ziglar"
-"To be happy, we must be true to nature and carry our age along with us. - Margaret Fuller"
-"Find ecstasy in life; the mere sense of living is joy enough. - Emily Dickinson"
-"The mere sense of living is joy enough. - Emily Dickinson"
-"Happiness is having a large, loving, caring, close-knit family in another city. - George Burns"
-"Nothing can bring you happiness but yourself. - Ralph Waldo Emerson"
-"Let your smile change the world, but don’t let the world change your smile. - Connor Franta"
-"Happiness is contagious—spread a little wherever you go. - Unknown"
-"Smile, and the world smiles with you. - Stanley Gordon West"
-"Happiness is like jam. You can’t spread even a little without getting some on yourself. - Unknown"
-"Don’t let the silly little things steal your happiness. - Unknown"
-"Gratitude is the fairest blossom which springs from the soul. - Henry Ward Beecher"
-"The happiest people take life day by day, complain very little, and are thankful for the little things. - Unknown"
-"Count your blessings, not your problems. - Roy T. Bennett"
-"Sunshine is the best medicine. - Unknown"
-    ],
-    sad: [
-        "Sadness is but a wall between two gardens. - Kahlil Gibran",
-        "The pain you feel today is the strength you feel tomorrow. - Unknown",
-        "Tears come from the heart and not from the brain. - Leonardo da Vinci"
-    ],
-    angry: [
-        "Anger is one letter short of danger. - Eleanor Roosevelt",
-        "The greatest remedy for anger is delay. - Lucius Annaeus Seneca",
-        "Anger is a momentary madness, so control your passion or it will control you. - G. M. Trevelyan"
-    ],
-    inspired: [
-        "The best way to predict the future is to create it. - Peter Drucker",
-        "Inspiration exists, but it has to find you working. - Pablo Picasso",
-        "The only way to do great work is to love what you do. - Steve Jobs"
-    ],
-    confident: [
-        "Confidence is preparation. Everything else is beyond your control. - Richard Kline",
-        "Believe in yourself and all that you are. Know that there is something inside you that is greater than any obstacle. - Christian D. Larson",
-        "Success is not the key to happiness. Happiness is the key to success. If you love what you are doing, you will be successful. - Albert Schweitzer"
-    ],
-    anxious: [
-        "Do not anticipate trouble, or worry about what may never happen. Keep in the sunlight. - Benjamin Franklin",
-        "Anxiety is a thin stream of fear trickling through the mind. If encouraged, it cuts a channel into which all other thoughts are drained. - Arthur Somers Roche",
-        "Nothing in the affairs of men is worthy of great anxiety. - Plato"
-    ],
-    hopeful: [
-        "Hope is being able to see that there is light despite all of the darkness. - Desmond Tutu",
-        "The darkest hour has only sixty minutes. - Morris Mandel",
-        "Hope is a waking dream. - Aristotle"
-    ]
-};
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Motivational Quotes by Emotion</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="container">
+        <h1 class="title">Motivational Quotes for Every Emotion</h1>
+        <div class="emotion-buttons">
+            <button class="emotion-btn" onclick="getQuote('happy')">Happy</button>
+            <button class="emotion-btn" onclick="getQuote('sad')">Sad</button>
+            <button class="emotion-btn" onclick="getQuote('angry')">Angry</button>
+            <button class="emotion-btn" onclick="getQuote('inspired')">Inspired</button>
+            <button class="emotion-btn" onclick="getQuote('confident')">Confident</button>
+            <button class="emotion-btn" onclick="getQuote('anxious')">Anxious</button>
+            <button class="emotion-btn" onclick="getQuote('hopeful')">Hopeful</button>
+        </div>
+        <div class="quote-display">
+            <p id="quote">Click an emotion to get a motivational quote!</p>
+        </div>
+    </div>
 
-// Function to display the quote
-function getQuote(emotion) {
-    const quoteArray = quotes[emotion];
-    const randomQuote = quoteArray[Math.floor(Math.random() * quoteArray.length)];
-    
-    const quoteDisplay = document.getElementById("quote");
-
-    // Add fade-out effect before displaying the new quote
-    quoteDisplay.classList.add("fade-out");
-    setTimeout(() => {
-        quoteDisplay.innerText = randomQuote;
-        quoteDisplay.classList.remove("fade-out");
-    }, 500);
-}
+    <script src="script.js"></script>
+</body>
+</html>
