--- a/index.html
+++ b/index.html
@@ -1,28 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Motivational Quotes by Emotion</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Motivational Quotes by Emotion</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f1f5fb;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
+      padding: 0;
+    }
+    h1 {
+      margin-top: 40px;
+      color: #22223b;
+      font-size: 2em;
+    }
+    .button-group {
+      margin: 30px 0;
+    }
+    .emotion-btn {
+      background: #4f8cff;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      padding: 12px 20px;
+      margin: 0 10px 10px 0;
+      font-size: 1em;
+      cursor: pointer;
+      transition: background 0.2s, transform 0.2s;
+    }
+    .emotion-btn:hover, .emotion-btn:focus {
+      background: #2563eb;
+      transform: translateY(-2px) scale(1.03);
+    }
+    #quote-container {
+      background: #fff;
+      box-shadow: 0 4px 24px rgba(80, 112, 202, 0.08);
+      border-radius: 8px;
+      padding: 36px 28px;
+      min-width: 320px;
+      min-height: 90px;
+      margin-bottom: 30px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    #quote {
+      font-size: 1.15em;
+      color: #333;
+      text-align: center;
+      line-height: 1.5;
+      transition: opacity 0.5s;
+      opacity: 1;
+    }
+    #quote.fade-out {
+      opacity: 0;
+    }
+    @media (max-width: 500px) {
+      #quote-container { min-width: 0; width: 90vw; }
+      .emotion-btn { width: 90vw; margin-right: 0; margin-bottom: 10px; }
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <h1 class="title">Motivational Quotes for Every Emotion</h1>
-        <div class="emotion-buttons">
-            <button class="emotion-btn" onclick="getQuote('happy')">Happy</button>
-            <button class="emotion-btn" onclick="getQuote('sad')">Sad</button>
-            <button class="emotion-btn" onclick="getQuote('angry')">Angry</button>
-            <button class="emotion-btn" onclick="getQuote('inspired')">Inspired</button>
-            <button class="emotion-btn" onclick="getQuote('confident')">Confident</button>
-            <button class="emotion-btn" onclick="getQuote('anxious')">Anxious</button>
-            <button class="emotion-btn" onclick="getQuote('hopeful')">Hopeful</button>
-        </div>
-        <div class="quote-display">
-            <p id="quote">Click an emotion to get a motivational quote!</p>
-        </div>
-    </div>
+  <h1>Get a Motivational Quote by Emotion</h1>
+  <div class="button-group">
+    <button class="emotion-btn" onclick="getQuote('happy')">Happy</button>
+    <button class="emotion-btn" onclick="getQuote('sad')">Sad</button>
+    <button class="emotion-btn" onclick="getQuote('angry')">Angry</button>
+    <button class="emotion-btn" onclick="getQuote('inspired')">Inspired</button>
+    <button class="emotion-btn" onclick="getQuote('confident')">Confident</button>
+    <button class="emotion-btn" onclick="getQuote('anxious')">Anxious</button>
+    <button class="emotion-btn" onclick="getQuote('hopeful')">Hopeful</button>
+  </div>
+  <div id="quote-container">
+    <span id="quote">Click a button above to get your quote!</span>
+  </div>
+  <script>
+    // Sample set of quotes categorized by emotions
+    const quotes = {
+      happy: [
+        "Happiness is not something ready made. It comes from your own actions. - Dalai Lama",
+        "For every minute you are angry you lose sixty seconds of happiness. - Ralph Waldo Emerson",
+        "Happiness depends upon ourselves. - Aristotle",
+        "Be happy for this moment. This moment is your life. - Omar Khayyam",
+        "The purpose of our lives is to be happy. - Dalai Lama",
+        "Happiness is the secret to all beauty. There is no beauty without happiness. - Christian Dior",
+        "Count your age by friends, not years. Count your life by smiles, not tears. - John Lennon",
+        "Think of all the beauty still left around you and be happy. - Anne Frank",
+        "The only joy in the world is to begin. - Cesare Pavese"
+        // ... (add more from your original list as needed)
+      ],
+      sad: [
+        "Sadness is but a wall between two gardens. - Kahlil Gibran",
+        "The pain you feel today is the strength you feel tomorrow. - Unknown",
+        "Tears come from the heart and not from the brain. - Leonardo da Vinci"
+      ],
+      angry: [
+        "Anger is one letter short of danger. - Eleanor Roosevelt",
+        "The greatest remedy for anger is delay. - Lucius Annaeus Seneca",
+        "Anger is a momentary madness, so control your passion or it will control you. - G. M. Trevelyan"
+      ],
+      inspired: [
+        "The best way to predict the future is to create it. - Peter Drucker",
+        "Inspiration exists, but it has to find you working. - Pablo Picasso",
+        "The only way to do great work is to love what you do. - Steve Jobs"
+      ],
+      confident: [
+        "Confidence is preparation. Everything else is beyond your control. - Richard Kline",
+        "Believe in yourself and all that you are. Know that there is something inside you that is greater than any obstacle. - Christian D. Larson",
+        "Success is not the key to happiness. Happiness is the key to success. If you love what you are doing, you will be successful. - Albert Schweitzer"
+      ],
+      anxious: [
+        "Do not anticipate trouble, or worry about what may never happen. Keep in the sunlight. - Benjamin Franklin",
+        "Anxiety is a thin stream of fear trickling through the mind. If encouraged, it cuts a channel into which all other thoughts are drained. - Arthur Somers Roche",
+        "Nothing in the affairs of men is worthy of great anxiety. - Plato"
+      ],
+      hopeful: [
+        "Hope is being able to see that there is light despite all of the darkness. - Desmond Tutu",
+        "The darkest hour has only sixty minutes. - Morris Mandel",
+        "Hope is a waking dream. - Aristotle"
+      ]
+    };
 
-    <script src="script.js"></script>
+    // Function to display the quote
+    function getQuote(emotion) {
+      const quoteArray = quotes[emotion];
+      if (!quoteArray) return;
+      const randomQuote = quoteArray[Math.floor(Math.random() * quoteArray.length)];
+      const quoteDisplay = document.getElementById("quote");
+      // Add fade-out effect before displaying the new quote
+      quoteDisplay.classList.add("fade-out");
+      setTimeout(() => {
+        quoteDisplay.innerText = randomQuote;
+        quoteDisplay.classList.remove("fade-out");
+      }, 500);
+    }
+  </script>
 </body>
 </html>
