--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
 <body>
   <h1>Get a Motivational Quote by Emotion</h1>
   <div class="button-group">
-    <button class="emotion-btn" onclick="getQuote('happy')">Happy</button>
-    <button class="emotion-btn" onclick="getQuote('sad')">Sad</button>
-    <button class="emotion-btn" onclick="getQuote('angry')">Angry</button>
-    <button class="emotion-btn" onclick="getQuote('inspired')">Inspired</button>
-    <button class="emotion-btn" onclick="getQuote('confident')">Confident</button>
-    <button class="emotion-btn" onclick="getQuote('anxious')">Anxious</button>
-    <button class="emotion-btn" onclick="getQuote('hopeful')">Hopeful</button>
+    <button class="emotion-btn" onclick="getQuote('happy')">😃Happy</button>
+    <button class="emotion-btn" onclick="getQuote('sad')">☹️Sad</button>
+    <button class="emotion-btn" onclick="getQuote('angry')">😡Angry</button>
+    <button class="emotion-btn" onclick="getQuote('inspired')">🤑Inspired</button>
+    <button class="emotion-btn" onclick="getQuote('confident')">😎Confident</button>
+    <button class="emotion-btn" onclick="getQuote('anxious')">😰Anxious</button>
+    <button class="emotion-btn" onclick="getQuote('hopeful')">🤩Hopeful</button>
   </div>
   <div id="quote-container">
     <span id="quote">Click a button above to get your quote!</span>
