--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Motivational Quotes by Emotion</title>
   <style>
     body {
@@ -143,3 +144,4 @@
   </script>
 </body>
 </html>
+
